--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,10 +1,118 @@
 body{
     font-family: Arial, sans-serif;
 }
+.preloader_container{
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #344051;
+    z-index: 3;
+    width: 100%;
+    height: 100%;
+}
+.preloader{
+    width: 100px;
+    height: 100px;
+    border: 6px solid rgba(209, 119, 0, 0.5);
+    border-radius: 50%;
+    border-left-color: #d17700;
+    -webkit-animation: loader 1.3s linear infinite;
+    -o-animation: loader 1.3s linear infinite;
+    animation: loader 1.3s linear infinite;
+}
+.load{
+    position: absolute;
+    top: 60%;
+    left: 18%;
+    transform: translate(50%, 50%);
+    transform-origin: bottom center;
+}
+.loading{
+    display: inline-block;
+    margin-right: 50px;
+    width: 10px;
+    height: 50px;
+    -webkit-animation: loading 1.5s linear infinite;
+    -o-animation: loading 1.5s linear infinite;
+    animation: loading 1.5s linear infinite;
+    transform: translateY(-100%)
+}
+.loading span{
+    font-size: 70px;
+    color: #d17700;
+}
+.bar1{
+    animation-delay: 0.1s;
+}
+.bar2{
+    animation-delay: 0.2s;
+}
+.bar3{
+    animation-delay: 0.3s;
+}
+.bar4{
+    animation-delay: 0.4s;
+}
+.bar5{
+    animation-delay: 0.5s;
+}
+.bar6{
+    animation-delay: 0.6s;
+}
+.bar7{
+    animation-delay: 0.7s;
+}
+.bar8{
+    animation-delay: 0.8s;
+}
+.bar9{
+    animation-delay: 0.9s;
+}
+.bar10{
+    animation-delay: 1s;
+}
+.bar11{
+    animation-delay: 1.1s;
+}
+@keyframes loading{
+    0%{
+        transform: translateY(-100%)
+    }
+    25%{
+        transform: translateY(-50%)
+    }
+    50%{
+        transform: translateY(-0%)
+    }
+    75%{
+        transform: translateY(-50%)
+    }
+    100%{
+        transform: translateY(-100%)
+    }
+}
+@keyframes loader{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
+}
+.loaded_hiding .preloader_container {
+  transition: 0.3s opacity;
+  opacity: 0;
+}
+.loaded .preloader_container {
+  display: none;
+}
 nav{
     width: 100%;
     height: 60px;
     background: #344051;
+    position: fixed;
+    z-index: 1;
 }
 .logo{
     color: #fff;
@@ -12,6 +120,31 @@ nav{
     line-height: 60px;
     padding-left: 388px;
     float: left;
+    -webkit-animation: comming 2s;
+    -o-animation: comming 2s;
+    animation: comming 2s;
+}
+.logo a{
+    transition: all, 0.4s;
+    display: inline-block;
+    transform: scale(1);
+}
+.logo a:visited{
+    color: #fff;
+}
+.logo a:hover{
+    color: #d17700;
+}
+.logo a:active{
+    transform: scale(1.1);
+}
+@keyframes comming{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
 }
 .menu{
     float: left;
@@ -24,17 +157,67 @@ nav{
     line-height: 60px;
     margin-right: 33px;
     text-transform: uppercase;
+    -webkit-animation: menu 2s forwards;
+    -o-animation: menu 2s forwards;
+    animation: menu 2s forwards;
+    opacity: 0;
 }
-.main{
+.menu li:nth-child(2){
+    animation-delay: 0.4s;
+}
+.menu li:nth-child(3){
+    animation-delay: 0.8s;
+}
+.menu li:nth-child(4){
+    animation-delay: 1.2s;
+}
+.menu li:nth-child(5){
+    animation-delay: 1.6s;
+}
+.menu li:nth-child(6){
+    animation-delay: 2s;
+}
+.menu li a:visited{
+    color: #fff;
+}
+.menu li a{
+    transition: all, 0.4s;
+    transform: scale(1);
+    display: inline-block;
+}
+.menu li a:hover{
+    color: #d17700;
+}
+.menu li a:active{
+    transform: scale(1.1);
+}
+@keyframes menu{
+    from{
+        opacity: 0;
+        margin-top: -80px
+    }
+    to{
+        opacity: 1;
+        margin-top: 0px;
+    }
+}
+main{
     width: 100%;
-    height: calc(100% - 60px);
-    background: url(../img/boy.png) 90% 100% /auto 80% no-repeat, url(../img/background_main.jpg) center/cover no-repeat;
+    height: 100%;
+    background: url(../img/boy.png) 90% 100% /auto 80% no-repeat, url(../img/background_main.png) center/cover no-repeat;
 }
 .title_container{
     float: left;
     margin: 431px 0px 0px 403px;
     color: #2c384a;
     text-align: center;
+    opacity: 0;
+    -webkit-animation: title 2s forwards;
+    -o-animation: title 2s forwards;
+    animation: title 2s forwards;
+    -webkit-animation-delay: 3s;
+    -o-animation-delay: 3s;
+    animation-delay: 3s;
 }
 .title_container h1{
     font-size: 65px;
@@ -57,14 +240,38 @@ nav{
     padding: 0px 16px;
     margin: 58px 14px 0px 14px;
     font-weight: bold;
+    transition: all, 0.4s;
+    transform: scale(1);
+}
+.title_container input:hover{
+    background: #344051;
+    color: #fff;
+}
+.title_container input:active{
+    transform: scale(1.1);
+}
+@keyframes title{
+    from{
+        opacity: 0;
+        margin-left: -403px;
+    }
+    to{
+        opacity: 1;
+        margin-left: 403px;
+    }
+}
+.chapter_1::after{
+    content: "";
+    display: block;
+    border-bottom: 4px solid #d17700;
+    width: 70px;
+    margin: 31px auto 59px auto;
 }
 .chapter_1 h2{
     text-align: center;
     color: #263244;
     font-size: 30px;
     text-transform: uppercase;
-    text-decoration: underline #d17700;
-    margin-bottom: 60px;
     padding-top: 108px;
     font-weight: bold;
 }
@@ -95,21 +302,61 @@ nav{
     font-size: 11px;
     font-weight: bold;
     padding: 0px 11px 0px 32px;
+    transform: scale(1);
+}
+.about_me input:active{
+    transform: scale(1.1);
+    border-color: #d17700;
+    color: #d17700;
 }
 .skills_background{
     width: 100%;
     height: 522px;
     background: url(../img/skills_background.jpg) center/cover no-repeat;
 }
+.chapter_2::after{
+    content: "";
+    display: block;
+    border-bottom: 4px solid #d17700;
+    width: 70px;
+    margin: 31px auto 108px auto;
+    opacity: 0;
+    -webkit-animation: appearance_af 1s forwards;
+    -o-animation: appearance_af 1s forwards;
+    animation: appearance_af 1s forwards;
+    -webkit-animation-delay: 0.5s;
+    -o-animation-delay: 0.5s;
+    animation-delay: 0.5s;
+}
 .chapter_2 h2{
     text-align: center;
     color: #263244;
     font-size: 30px;
     text-transform: uppercase;
-    text-decoration: underline #d17700;
-    margin-bottom: 108px;
     padding-top: 107px;
     font-weight: bold;
+    -webkit-animation: appearance 1s;
+    -o-animation: appearance 1s;
+    animation: appearance 1s;
+    transform: rotate(0deg);
+}
+@keyframes appearance{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+@keyframes appearance_af{
+    from{
+        opacity: 0;
+        margin-left: -600px;
+    }
+    to{
+        opacity: 1;
+        margin-left: 917px;
+    }
 }
 .item_skills{
     float: left;
@@ -123,6 +370,11 @@ nav{
 .item_skills img{
     margin-left: auto;
     margin-right: auto;
+    opacity: 0;
+    -webkit-animation: img_move 2s forwards;
+    -o-animation: img_move 2s forwards;
+    animation: img_move 2s forwards;
+    transform: scale(1)
 }
 .item_skills h4{
     color: #cf7600;
@@ -130,19 +382,85 @@ nav{
     font-weight: bold;
     margin-top: 35px;
     margin-bottom: 13px;
+    opacity: 0;
+    transform: scale(1);
+    -webkit-animation: h4_appearance 1s forwards;
+    -o-animation: h4_appearance 1s forwards;
+    animation: h4_appearance 1s forwards;
 }
 .item_skills p{
     color: #3f495a;
     font-size: 13px;
     text-align: center;
 }
+.item_skill1 p{
+    opacity: 0;
+    -webkit-animation: p_appearance1 1.5s forwards;
+    -o-animation: p_appearance1 1.5s forwards;
+    animation: p_appearance1 1.5s forwards;
+}
+.item_skill2 p{
+    opacity: 0;
+    -webkit-animation: p_appearance2 1.5s forwards;
+    -o-animation: p_appearance2 1.5s forwards;
+    animation: p_appearance2 1.5s forwards;
+}
+@keyframes img_move{
+    1%{
+        opacity: 0;
+        transform: scale(1) 
+    }
+    50%{
+        opacity: 1;
+        transform: scale(1.3);
+    }
+    100%{
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+@keyframes h4_appearance{
+    from{
+        opacity: 0;
+        transform: scale(0.1);
+    }
+    to{
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+@keyframes p_appearance1{
+    from{
+        opacity: 0;
+        margin-left: -900px;
+    }
+    to{
+        opacity: 1;
+        margin-left: 0px;
+    }
+}
+@keyframes p_appearance2{
+    from{
+        opacity: 0;
+        margin-right: -900px;
+    }
+    to{
+        opacity: 1;
+        margin-right: 0px;
+    }
+}
+.chapter_3::after{
+    content: "";
+    display: block;
+    border-bottom: 4px solid #d17700;
+    width: 70px;
+    margin: 30px auto 36px auto;
+}
 .chapter_3 h2{
     text-align: center;
     color: #263244;
     font-size: 30px;
     text-transform: uppercase;
-    text-decoration: underline #d17700;
-    margin-bottom: 36px;
     padding-top: 104px;
     font-weight: bold;
 }
@@ -160,6 +478,7 @@ nav{
 .case1{
     margin-left: 388px;
     margin-bottom: 201px;
+    height: 169px;
 }
 .case h4{
     color: #384354;
@@ -197,6 +516,12 @@ nav{
     border-radius: 5px;
     background-color: #63b5ae;
     color: #fff;
+    transform: scale(1);
+    z-index: 0;
+}
+.case1 input:active{
+    transform: scale(1.1);
+    color: #384354;
 }
 .case_container{
     margin-top: 153px;
@@ -228,6 +553,11 @@ nav{
     color: #737373;
     padding: 0px 31px 0px 23px;
 }
+.case_price select{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
 .p_final1{
     border-top: 2px solid #d1d1d1;
     width: 891px;
@@ -250,13 +580,18 @@ nav{
 .price_final span{
     font-size: 20px;
 }
+.chapter_4::after{
+    content: "";
+    display: block;
+    border-bottom: 4px solid #d17700;
+    width: 70px;
+    margin: 32px auto 89px auto;
+}
 .chapter_4 h2{
     text-align: center;
     color: #263244;
     font-size: 30px;
     text-transform: uppercase;
-    text-decoration: underline #d17700;
-    margin-bottom: 89px;
     padding-top: 103px;
     font-weight: bold;
 }
@@ -264,6 +599,7 @@ nav{
     width: 100%;
     height: 499px;
     background: url(../img/stat_background.jpg) center/cover no-repeat;
+    background-attachment: fixed;
 }
 .item_stat{
     float: left;
@@ -277,6 +613,7 @@ nav{
 }
 .item_stat img{
     padding-bottom: 32px;
+    height: 82px;
 }
 .item_stat h4{
     color: #323d4f;
@@ -290,13 +627,18 @@ nav{
     font-weight: bold;
     text-transform: uppercase;
 }
+.chapter_5::after{
+    content: "";
+    display: block;
+    border-bottom: 4px solid #d17700;
+    width: 70px;
+    margin: 34px auto 97px auto;
+}
 .chapter_5 h2{
     text-align: center;
     color: #263244;
     font-size: 30px;
     text-transform: uppercase;
-    text-decoration: underline #d17700;
-    margin-bottom: 97px;
     padding-top: 105px;
     font-weight: bold;
 }
@@ -320,13 +662,18 @@ nav{
 .feedback span{
     font-weight: bold;
 }
+.chapter_6::after{
+    content: "";
+    display: block;
+    border-bottom: 4px solid #d17700;
+    width: 70px;
+    margin: 32px auto 69px auto;
+}
 .chapter_6 h2{
     text-align: center;
     color: #fff;
     font-size: 30px;
     text-transform: uppercase;
-    text-decoration: underline #d17700;
-    margin-bottom: 69px;
     padding-top: 105px;
     font-weight: bold;
 }
@@ -373,9 +720,20 @@ nav{
     width: 733px;
 }
 .enter{
+    display: block;
+    float: left;
     width: 352px;
     height: 34px;
-    margin: 46px 7.25px 14px 0px;
+    margin: 46px 14.5px 14px 0px;
+    padding-left: 14px;
+    font-weight: bold;
+}
+.enter1{
+    display: block;
+    float: left;
+    width: 352px;
+    height: 34px;
+    margin: 46px 0px 14px 14.5px;
     padding-left: 14px;
     font-weight: bold;
 }
@@ -398,6 +756,15 @@ nav{
     border: 2px solid #fff;
     border-radius: 5px;
     color: #fff;
+    transform: scale(1);
+}
+.button:hover{
+    background-color: #fff;
+    color: #344051;
+    border: 4px solid #d17700;
+}
+.button:active{
+    transform: scale(1.1);
 }
 .map{
     height: 350px;
