--- a/BootstrapProject/src/css/b_style.css
+++ b/BootstrapProject/src/css/b_style.css
@@ -300,7 +300,7 @@ main{
     font-size: 15px;
     text-align: center;
 }
-.case input{
+.case_input{
     font-family: 'Myriad Pro';
     font-size: 18px;
     height: 44px;
@@ -344,8 +344,9 @@ main{
 }
 @media (max-width: 991px){
     .case_input{
-        height: 35px;
-        width: 180px;
+        height: 30px;
+        width: 140px;
+        font-size: 14px;
     }
     .case_ex h4{
         font-size: 22px;
@@ -355,6 +356,22 @@ main{
     }
     .case_ex_span_2 span{
         font-size: 12px;
+    }
+}
+@media (max-width: 768px){
+    .case_input{
+        height: 25px;
+        width: 120px;
+        font-size: 10px;
+    }
+    .case_ex h4{
+        font-size: 18px;
+    }
+    .case_ex_span_1 span{
+        font-size: 9px;
+    }
+    .case_ex_span_2 span{
+        font-size: 9.2px;
     }
 }
 .price{
@@ -440,6 +457,19 @@ main{
         word-spacing: 570px;
     }
 }
+@media (max-width: 768px){
+    .p_final1{
+        word-spacing: 430px;
+    }
+    .p_final2{
+        word-spacing: 390px;
+    }
+    .price_input{
+        width: 170px;
+        height: 35px;
+        font-size: 16px;
+    }
+}
 .stat_bg{
     width: 100%;
     height: 499px;
@@ -485,6 +515,14 @@ main{
     text-transform: uppercase;
     padding-top: 95px;
     font-weight: bold;
+}
+@media (max-width: 768px){
+    .item_stat h4{
+        font-size: 28px;
+    }
+    .item_stat p{
+        font-size: 13px;
+    }
 }
 .chapter_5::after{
     content: "";
