--- a/BootstrapProject/src/css/b_style.css
+++ b/BootstrapProject/src/css/b_style.css
@@ -16,7 +16,7 @@ nav{
     height: 60px;
     z-index: 10;
     position: fixed;
-}   
+}
 .logo{
     color: #fff;
     font-size: 23.33px;
@@ -85,6 +85,10 @@ nav{
 }
 .menu li:active{
     transform: scale(0.9);
+}
+.visited{
+    color: #eb7800;
+    border-bottom: 2px solid #ed7800;
 }
 .boot-btn{
     color: #fff;
@@ -310,10 +314,10 @@ main{
     transform: scale(1);
     z-index: 0;
 }
-.case input:hover{
+.case_input:hover{
     background-color: #295753;
 }
-.case input:active{
+.case_input:active{
     transform: scale(0.9);
 }
 .case_ex{
@@ -419,6 +423,10 @@ main{
 .price_final span{
     font-size: 25px;
 }
+.price_final input{
+    text-align: end;
+    width: 70px;
+}
 .price_input{
     width: 100%;
     font-family: 'Myriad Pro';
@@ -432,9 +440,33 @@ main{
     z-index: 0;
     margin-bottom: 37px;
 }
+.price_input:hover{
+    background-color: #295753;
+}
+.price_input:active{
+    transform: scale(0.9);
+}
 @media (max-width: 338px){
     .price h2{
         font-size: 30px;
+    }
+}
+.price{
+    opacity: 0;
+}
+.price.show-animation{
+    opacity: 1;
+    transition: opacity 1;
+    -webkit-animation: price 1s forwards;
+    -o-animation: price 1s forwards;
+    animation: price 1s forwards;
+}
+@keyframes price{
+    from{
+        transform: scale(0);
+    }
+    to{
+        transform: scale(1);
     }
 }
 .stat_bg{
@@ -664,4 +696,26 @@ main{
     color: #fff;
     text-align: center;
     background-color: #354051;
+}
+.mod{
+    visibility: hidden;
+}
+.modalInputOne{
+    border: 2px solid #676769;
+    width: 49%;
+    padding-left: 5px;
+    margin-right: 5px;
+}
+.modalInputTwo{
+    border: 2px solid #676769;
+    width: 48.5%;
+    padding-left: 5px;
+    margin-left: 5px;
+}
+.modalArea{
+    border: 2px solid #676769;
+    margin-top: 5px;
+    padding-left: 5px;
+    padding-right: 300px;
+    width: 100%;
 }
